--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     ></script>
   </head>
   <body>
-    <div style="height: 100vh; width: 100vw">
-      <div class="container">
+    <div style="height: 100vh; width: 100vw" id="small_bg_container">
+      <div class="container" id="container_of_top">
         <canvas class="canvas"></canvas>
       </div>
     </div>
